fix: main content sits a bit lower so breadcrumbs don't squish up against garden-bed-nav.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -50,6 +50,7 @@
 .main-header {
   display: none;
   background-color: $sidebar-color;
+  margin-bottom: $sp-5;
 
   @include mq(md) {
     display: flex;
